[tool.poetry]
name = "langgraph-demo"
version = "0.1.0"
description = ""
authors = ["kamran945 <kamran945@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
langchain = "^0.3.7"
langchain-groq = "^0.2.1"
httpx = "^0.27.2"
langgraph = "^0.2.45"
tavily-python = "^0.5.0"
langchain-community = "^0.3.5"
langgraph-checkpoint-sqlite = "^2.0.1"
langsmith = "^0.1.142"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
